--- a/proyecto 1/css/estilos2.css
+++ b/proyecto 1/css/estilos2.css
@@ -5,7 +5,7 @@ body{
     padding: 0;
 }
 header{
-    background: #333;
+    background: #0a0101;
     color: #fff;
     padding: 20px 0;
     text-align: center;
@@ -19,17 +19,17 @@ nav ul li{
     margin: 0 10px;
 }
 nav ul li a{
-    color: #fff;
+    color: #f4f1f1;
     text-decoration: none;
 }
 #about{
     padding: 20px;
-    background: #f4f4f4;
+    background: #f7f5f5;
 }
 #about h2{
     margin-top: 0;
 }
-.galery{
+.gallery{
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
