--- a/mision 2/css/turismo.css
+++ b/mision 2/css/turismo.css
@@ -2,13 +2,13 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: yellow;
+    background-color: white;
 
 }
 
 header {
     background-color: green;
-    color: red;
+    color: white;
     padding: 15px;
     text-align: center;
 }
@@ -30,5 +30,5 @@ section {
 footer {
     text-align: center;
     padding: 10px;
-    background-color:yellow;
+    background-color:white;
 }
